# sber_hse

./: .gitignore  README.md  compose.yaml  docker-compose.yml
workflow_compactor/: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.openwebui.local-api.yml  docker-compose.openwebui.yml  docker-compose.yml  langflow_json_optimization_answer.txt  pyproject.toml
workflow_compactor/design/: TECHNICAL_DESIGN.md
workflow_compactor/examples/: input_sample.json  langflow_ai_workflow_generator_component.py  output_ir.json  output_summary.json  validation_report.json
workflow_compactor/src/workflow_compactor/: __init__.py  api.py  cli.py  component_retrieval.py  copilot.py  extractor.py  flow_assembler.py  flow_spec_llm.py  models.py  normalize.py  planning_engine.py  summary.py  transformer.py  validate.py  visualize.py
