[project]
name = "workflow-compactor"
version = "0.1.0"
description = "Langflow workflow JSON compaction toolkit"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[project.scripts]
workflow-compactor = "workflow_compactor.cli:main"
workflow-copilot-api = "workflow_compactor.api:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

